--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "shopify app dev",
     "info": "shopify app info",
     "generate": "shopify app generate",
-    "deploy": "shopify app deploy"
+    "deploy": "shopify app deploy",
+    "serve": "cd web && npm run serve"
   },
   "dependencies": {
     "@shopify/polaris": "^13.9.2",
